--- a/index.html
+++ b/index.html
@@ -3343,9 +3343,9 @@
         
         <div id="news-tab" class="tab-content">
             <div class="section">
-                <div style="display:flex;align-items:center;justify-content:space-between;flex-wrap:nowrap;gap:10px;margin-bottom:15px;">
-                    <h2 class="section-title" data-icon="journal_icon.png" style="margin-bottom:0;border-bottom:none;padding-bottom:0;flex:1;min-width:0;"><span data-ru="Новости проекта" data-en="Project News">Новости проекта</span></h2>
-                    <div style="display:flex;gap:6px;flex-shrink:0;align-items:center;">
+                <div style="display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:8px;margin-bottom:15px;">
+                    <h2 class="section-title" data-icon="journal_icon.png" style="margin-bottom:0;border-bottom:none;padding-bottom:0;flex:1;min-width:160px;"><span data-ru="Новости проекта" data-en="Project News">Новости проекта</span></h2>
+                    <div style="display:flex;gap:6px;flex-shrink:0;align-items:center;flex-wrap:nowrap;">
                         <button class="copy-btn" onclick="showNewsAdminPanel()" style="font-size:0.8rem;padding:8px 14px;white-space:nowrap;">
                             <img src="https://sqlylxcnoqehorlgmztm.supabase.co/storage/v1/object/public/icons/icon/journal_icon.png" alt="" style="width:16px;height:16px;object-fit:contain;image-rendering:pixelated;vertical-align:middle;"> <span data-ru="Добавить новость" data-en="Add News">Добавить новость</span>
                         </button>
