--- a/index.html
+++ b/index.html
@@ -497,6 +497,77 @@
             transform: translateX(3px);
         }
 
+        @media (max-width: 600px) {
+            .authors {
+                grid-template-columns: 1fr 1fr;
+                gap: 10px;
+            }
+            .author-card {
+                padding: 12px 10px;
+            }
+            .author-name {
+                font-size: 0.62rem;
+                margin-bottom: 3px;
+            }
+            .author-role {
+                font-size: 0.58rem;
+                margin-bottom: 8px;
+                letter-spacing: 0;
+                line-height: 1.3;
+            }
+            .author-links {
+                gap: 5px;
+            }
+            .link {
+                font-size: 0.6rem;
+                gap: 5px;
+                justify-content: flex-start;
+            }
+            .link i {
+                font-size: 0.75rem;
+                flex-shrink: 0;
+            }
+            .link span {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .authors {
+                grid-template-columns: 1fr 1fr !important;
+                gap: 10px;
+            }
+            .author-card {
+                padding: 12px 10px;
+                box-shadow: 0 4px 0 #5a4a3a, 0 5px 12px rgba(0,0,0,0.15);
+            }
+            .author-name {
+                font-size: 0.62rem;
+                margin-bottom: 4px;
+            }
+            .author-role {
+                font-size: 0.58rem;
+                margin-bottom: 10px;
+                letter-spacing: 0;
+                line-height: 1.4;
+            }
+            .author-links { gap: 5px; }
+            .link {
+                font-size: 0.6rem;
+                gap: 5px;
+                justify-content: flex-start;
+            }
+            .link i { font-size: 0.75rem; flex-shrink: 0; }
+            .link span {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                max-width: 100%;
+            }
+        }
+
         .steps {
             display: flex;
             flex-direction: column;
@@ -2876,10 +2947,6 @@
 
             .container {
                 padding: 30px 20px;
-            }
-
-            .authors {
-                grid-template-columns: 1fr;
             }
 
             .zerotier-code {
