--- a/index.html
+++ b/index.html
@@ -501,6 +501,13 @@
             .authors {
                 grid-template-columns: 1fr;
                 gap: 10px;
+                width: 100%;
+                box-sizing: border-box;
+            }
+            .author-card {
+                width: 100%;
+                box-sizing: border-box;
+                box-shadow: 0 4px 0 #5a4a3a;
             }
             .author-name {
                 font-size: 1rem;
@@ -2892,6 +2899,7 @@
 
             .container {
                 padding: 30px 20px;
+                overflow-x: hidden;
             }
 
             .zerotier-code {
