--- a/index.html
+++ b/index.html
@@ -554,6 +554,12 @@
             font-family: 'Minecraft', sans-serif;
         }
 
+        .step-content {
+            min-width: 0;
+            flex: 1;
+            overflow: hidden;
+        }
+
         .step-content h3 {
             font-size: 1.1rem;
             margin-bottom: 5px;
